--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store-devtools": "^8.6.0",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
+    "ngx-chips": "^2.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
